--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,5 +11,7 @@
     </header>
     <main>
     </main>
+
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
