Header OK, Box limit and placeholders

--- a/index.html
+++ b/index.html
@@ -11,10 +11,52 @@
     <link rel="stylesheet" type="text/css" href="css/theme.css">
 </head>
 <body>
-    <header>
-    </header>
-    <main>
-    </main>
+    <section class="main">       
+        <div class="box1">
+            <div class="header">
+                <div class="col w-left">
+                    <span>Você Visitou:</span>
+                </div>
+                <div class="col">
+                        <span>e talvez se interesse por:</span>                       
+                </div>
+            </div>
+            <div class="box2">
+                <article>
+                    <img src="image.png" alt="img">
+                    <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                </article>
+            </div>
+        </div>
+        <div class="blur"></div>
+        
+        <div class="list">
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+            <article>
+                <img src="image.png" alt="img">
+                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+            </article>
+        </div>
+    </section>
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
