arrow next page positioned

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="main">       
-        <div class="box1">
+        <div class="box-header">
             <div class="header">
                 <div class="col w-left">
                     <span>Você Visitou:</span>
@@ -21,12 +21,15 @@
                         <span>e talvez se interesse por:</span>                       
                 </div>
             </div>
-            <div class="box2">
+            <div class="box-products">
                 <article>
                     <img src="image.png" alt="img">
                     <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
                 </article>
             </div>
+        </div>
+        <div class="arrow-next">
+            <img src="img/arrowOn.png" alt="próxima página">
         </div>
         <div class="blur"></div>
         
