building HTML with JSON

--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
                         <span>e talvez se interesse por:</span>                       
                 </div>
             </div>
-            <div class="box-products">
-                <article>
-                    <img src="image.png" alt="img">
-                    <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
-                </article>
+            <div id="reference" class="box-products">
             </div>
         </div>
         <div class="arrow-previous" onclick="previousPage()">
@@ -36,31 +32,33 @@
         </div>
         <div class="blur"></div>
         
-        <div id="list" class="list" style="left: 17.5vw;"> <!-- Style will be used by javascript to paginate -->
+        <div class="list">
+        <div id="list" style="transform: translate(0vw);">
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 1 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 2 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 3 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 4 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 5 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
             <article>
                 <img src="image.png" alt="img">
-                <p>texto texto textotexto texto textotexto texto textotexto texto textotexto</p>  
+                <p>texto 6 texto textotexto texto textotexto texto textotexto texto textotexto</p>  
             </article>
+        </div>
         </div>
     </section>
 
