refactor CSS to smacss pattern, fixed colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="main">       
         <div class="box-header">
-            <div class="header">
+            <div class="header t-header">
                 <div class="col w-left">
                     <span>Você Visitou:</span>
                 </div>
@@ -21,7 +21,7 @@
                         <span>e talvez se interesse por:</span>                       
                 </div>
             </div>
-            <div id="reference" class="box-products">
+            <div id="reference" class="box-products t-reference">
             </div>
         </div>
         <div class="arrow-previous" onclick="previousPage()">
@@ -32,7 +32,7 @@
         </div>
         <div class="blur"></div>
         
-        <div class="list">
+        <div class="l-list">
         <div id="list" style="transform: translate(0vw);">
             <article>
                 <img src="image.png" alt="img">
